project2/tests/reject/0-mult-bad.cc
int main() {
    int x = 3 * true;
    int y = true * false;
    int z = 7.0 * false;
}